--- a/Lesson2/Ls2actv1.html
+++ b/Lesson2/Ls2actv1.html
@@ -12,8 +12,9 @@
     I love <b><u>playing games, coding listening to music 
         and playing with my siblings</u></b><br>
         My favourite <del>favourite</del>quote of life is <q>When you wake up 
-            in the morning you have two choices either you go back to sleep or you
-            get up and chase after your dreams.
+            in the morning you have two choices either you go
+             back to sleep or you
+            get up and chase after your dreams. 
         </q>
     
 </body>
