--- a/Lesson4/les4.actv1.html
+++ b/Lesson4/les4.actv1.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media in html</title>
     let's add a picture here
-    <img src="blackcar.jpeg" alt="picture of a car" height="90%" width="80%">
+    <img src="https://images.pexels.com/photos/909907/pexels-photo-909907.jpeg?auto=compress&cs=tinysrgb&w=600"
+     alt="picture of a car" height="90%" width="80%">
+     <hr>
+     let's add an audio here
+     <audio controls>
+        <source src="small-dog-barking-84707.mp3" type="mp3">
+        
+
+     </audio>
 </head>
 <body>
     
