semantics in html

--- a/Lesson5/les5.actv1.html
+++ b/Lesson5/les5.actv1.html
@@ -46,6 +46,22 @@ the longest showed the greatest amount of affection!
         <img  src="pexels-chevanon-1108099.jpg" alt="picture of a dpg" height="50%" width="90%">
         <figcaption>a cute dog</figcaption>
     </figure>
+    <audio controls autoplay>
+        <source src="two-dogs-barking-71633.mp3" type="audio/mp3">
+
+    </audio>
+    <br>
+    Dogs differ behaviour as seen below
+    <video controls height="100%" width="80%">
+        <source src="snowdogs.mp4">
+
+    </video>
     </main>
+    <footer>
+        If you admire our webpage and wish to know more about cute
+        dogs their behaviours and what the prefer to eat, do and
+        watch be sure to visit us at <a href="ebubegabriel2009
+        @gmail.com">Onuohas' foundation</a>
+    </footer>
 </body>
 </html>
