semantics  in html

--- a/Lesson5/les5.actv1.html
+++ b/Lesson5/les5.actv1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Navigation links</h1>
+        <h1>Dogs</h1>
         <nav>
         <ul>
             <li><a href="#Home">Home</a></li>
