--- a/Lesson9-css/les9.actv4.html
+++ b/Lesson9-css/les9.actv4.html
@@ -11,16 +11,16 @@
     inputing a command using html coding language
     and css coding language.</h1>
 
-    <h1 id="box">We can add a text shadow in this text 
+    <h1 id="box">We can add a box shadow in this text 
         by simply inputing a command using html coding 
         language and css coding language.
     </h1>
 
-    <div>
+    <div style="font-size: 20px;">
         <p>This is an example of an indent text in the 
            below text.
         </p>
-        <p id="indent" style="color: violet;">This is a simple demonstration
+        <p id="indent" style="color: rgb(18, 234, 72);">This is a simple demonstration
             of the various types and strategies of using
             indent in combining css coding language and 
             html language.
