--- a/Project2/p.html
+++ b/Project2/p.html
@@ -21,7 +21,7 @@
     ul li:hover{color:red}
     p::first-letter{
     font-size: 200%;
-    color: tomato;
+    color: tomato;}
     </style>
 </head>
 <body>
