project on typography

--- a/projects5/project.html
+++ b/projects5/project.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project on Typography</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+    </script>  
     <style>
-        
+      body{
+        background: linear-gradient(green,orange,blue,purple);
+      }  
     </style>
 </head>
 <body>
-    
+ <div class="container">
+    <h1 class="display-3 text-white bg-dark">Lorem 30</h1>
+  Hello everyone today i will talking about how to
+  use <mark>Lorem 30</mark>. 
+  <p>This task is very simple and is used in 
+    programming languages which can be <abbr title="
+    Hypertext Markup languages">html</abbr>,
+<abbr title="Cascading Style Sheet">CSS</abbr>,
+and <abbr title="Javascript">JS</abbr>. <br>
+This task is very simple and i learnt this from
+Codingal.
+  </p>   
+  <blockquote class="blockquote">
+    codingal Inspiring people to have fun.
+  </blockquote>
+  <footer class="blockquote-footer">
+    From Codingal
+  </footer> <br><br>
+  <h2 class="display-4">The process</h2>
+<p>Simply press <kbd>lorem 30</kbd>
+and hit <kbd>tab</kbd>
+then the following latin texts will follow</p>
+<p>Lorem ipsum dolor sit amet consectetur 
+    adipisicing elit. Fuga, temporibus porro?
+    Earum similique fugit dicta officiis vero
+    veritatis sunt esse ea quos reiciendis?
+    Molestiae quo itaque hic non obcaecati 
+    perspiciatis!</p> <br>
+    <p>This is how the code looks like.
+        <pre>
+        Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Dolores perferendis
+        quos deserunt voluptas quas, dicta 
+        aspernatur nostrum dolore voluptate id
+        repudiandae veritatis beatae, eligendi,
+        error eum culpa temporibus earum
+        minima.
+        </pre>
+    </p>
+ </div>   
 </body>
 </html>
