--- a/Lesson17-Bootstrap/les17.actv1.html
+++ b/Lesson17-Bootstrap/les17.actv1.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
 <h2>My Card</h2>
-<div class="card" style="background-color: pink;
- width: fit-content;">
-<center><img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" alt="card-image"></center></div>
+<div class="card" style="background-color: blue;
+ width: 20rem;">
+<img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" alt="card-image"></center></div>
 <div class="card-body">
     <h4 class="card-title" style="color: goldenrod;">A card</h4>
     <h6 class="card-subtitle">Picture</h6>
