--- a/Project7/Project-on-utility1.html
+++ b/Project7/Project-on-utility1.html
@@ -7,17 +7,69 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
     </script>
+    <style>
+        ul li::before{content: "✝️";}
+        ul li:hover{color: gold;}
+        ul li:nth-child(2){background-color: blue;}
+        ul li:nth-child(5){background-color: blue;}
+        body{
+            background: gray;
+        }
+    </style>
 </head>
-<body style="text-align: center;">
-   <div class="jumbotron jumbotron-fluid">
+<body>
+   <div class="jumbotron jumbotron-fluid" style="text-align: center;">
     <h1 style="color: orange;
     font-style: italic;">Latin is Life</h1>
     <p 
     style="color: purple;">Be part of our latin family</p> <br>
     <button type="button" class="btn btn-primary">All</button>
-    <button type="button" class="btn btn-primary">Latest news</button>
-    <button type="button" class="btn btn-primary">Join</button>
-    <button type="button" class="btn btn-primary">Join</button>
+    <button type="button" class="btn btn-secondary">From us</button>
+    <button type="button" class="btn btn-warning">Related to your search</button>
+    <button type="button" class="btn btn-success">You might Like</button>
+    <button type="button" class="btn btn-info">Latest News
+        <span class="badge badge-warning">9</span>
+    </button>
+    <button type="button" class="btn btn-danger">More
+        <span class="badge badge-primary">999</span>
+    </button>
    </div> 
+  <div style="color:red ;">
+    <h2 class="display-4">Brief History about Latin</h2>
+    It was the language of ancient Rome and was used throughout the Roman Empire for
+     communication, administration, and literature. Latin evolved from the dialects 
+     of the Italic peoples of ancient Italy, and its earliest written records date
+     back to the 7th century BCE.
+     <p>Here at latin is life we help young latin lovers who love this ancient language
+         and wish to be part of our family. You can keep yourself in touch with latin using
+         the following and be part part of our clubs. <br>
+         They include;
+     </p>
+     <ul>
+         <li>Latin Club</li>
+         <li>History of latin</li>
+         <li>Latest latin words</li>
+         <li>How to improve your vocabulary</li>
+         <li>Latest news on latin</li>
+     </ul>
+      <h3 class="display-4">Latin Codes</h3>
+      <h3 class="display-4">Lorem 30</h3>
+      <p>As you will see in this page there is a secret latin code which is used
+         in webpages this code is very important because when practicing and you need
+         a page with plenty texts you can simply rely on this code to help you. 
+      </p>
+      <p>
+         The code goes as follows:
+        You just simply press <mark>Lorem30</mark> then <mark>Tab</mark> and the 
+        following code will appear. <br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto maxime adipisci
+        veniam dolorum voluptatum qui alias? Quia saepe quod alias officia! Numquam 
+        rerum vel omnis cumque, sint sed quibusdam reprehenderit.
+      </p>
+      <div class="progress-bar" style="width: 70%;">70%</div>
+  </div> 
+  
+
+   <br><br> <br><br>
 </body>
 </html>
